Fixed styling of height of Clippings Sidebar UI elements
(part of issue #466)

--- a/wx-src/pages/sidebar.css
+++ b/wx-src/pages/sidebar.css
@@ -67,9 +67,14 @@ html {
 }
 
 body {
+    height: 100%;
+    overflow-y: hidden;
     background-color: var(--color-bkgd);
     color: var(--color-default-text);
-    overflow-y: hidden;
+}
+
+main {
+    height: 100%;
 }
 
 .hbox, .vbox {
@@ -309,6 +314,14 @@ button, label {
     background-position-y: center;
     background-repeat: no-repeat;
     visibility: hidden;
+}
+
+#content {
+    height: calc(100% - var(--toolbar-height));
+}
+
+#normal-content {
+    height: 100%;
 }
 
 #scroll-content {
